tests/NormalTests/paczka1/small_fuzzy/26905859.err
Error in line 8: 3YCeh0S S363 92,3
Error in line 9: 3YCeh0S A163 52,5
Error in line 14: pp3hD S980 1#,8
